feat(PGT-23): update high-value transaction alerts API evidence and prompt instances
Refresh the DAO/BankManager/REST implementation, unit tests, feature
prompt, test plan, and accountability report for PGT-23 with the latest
Verify-phase validation run.

Validation evidence (JTEST_BUILD_ID=Parabank-Jenkins-local-20260916):
- SA: no new CRITICAL/HIGH findings in touched files vs baseline
- UT: 271/271 passed (35 new tests)
- SOAtest: 4/4 passed (found/empty/404/400), run against Dockerized app
- Coverage: 100% on new DAO/BankManager methods, 89% on new resource
See .agents/instances/PGT-23/accountability-report.md for the full
evidence chain.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>